# aegis-english

./: .gitignore
.github/workflows/: tauri-release.yml
english-agent-hub-front/src/app/agents/: AgentChatClient.tsx
english-agent-hub-front/src/entities/agent/api/: agentChatApi.ts
english-agent-hub-front/src/entities/question/api/: questionApi.ts
english-agent-hub-front/src/features/question-bank/: QuestionBankWorkspace.tsx
english-agent-hub-front/src/features/question-generator/: ExamPdfExtractDialog.tsx
english-agent-hub-front/src/widgets/header/ui/: Header.tsx
english-agent-hub-server/src/main/resources/: application.yaml
english-agent-hub-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.ts
english-agent-hub-tauri/src/: styles.css
english-agent-hub-tauri/src-tauri/: Cargo.toml  tauri.conf.json
english-agent-hub-tauri/src-tauri/capabilities/: default.json
english-agent-hub-tauri/src-tauri/src/: lib.rs  main.rs
english-agent-hub-tauri/src/app/: App.tsx
english-agent-hub-tauri/src/app/model/: navigation.ts
english-agent-hub-tauri/src/entities/agent/model/: types.ts
english-agent-hub-tauri/src/entities/chat/api/: chatApi.ts
english-agent-hub-tauri/src/entities/exam/model/: types.ts
english-agent-hub-tauri/src/features/auth/api/: authApi.ts
english-agent-hub-tauri/src/features/auth/login/: LoginScreen.tsx
english-agent-hub-tauri/src/shared/api/: client.ts
배포 가이드/: CORS 설정.md  GitHub Actions Secrets 등록 가이드.md  README.md  Tauri 앱 배포 운영.md  배포 체크리스트.md  백엔드 배포.md
(+25 files in other folders)
