[package]
name = "english-agent-hub-tauri"
version = "0.1.7"
description = "AEGIS English desktop app"
authors = ["AEGIS"]
edition = "2021"

[lib]
name = "english_agent_hub_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
